@@ -4,7 +4,7 @@ SOURCES=smain.c common.c sound.c z80.c sdl_engine.c sdl_hotspots.c \
 	sdl_input.c sdl_resources.c sdl_video.c
 OBJECTS=$(patsubst %.c, %.o, $(SOURCES))
 VERSION=$(shell cat VERSION)
-export PACKAGE_DATA_DIR=./data
+export PREFIX=/opt/QtPalmtop
 
 # This uses the default cross compiler directory of /opt/Embedix and
 # the default QPE directory of /opt/Qtopia
@@ -14,7 +14,7 @@ CC=/opt/Embedix/tools/bin/arm-linux-gcc
 CFLAGS=-O3 -Wall -I$(DEVPREFIX)/include \
 	`$(DEVPREFIX)/bin/sdl-config --prefix=$(DEVPREFIX) --cflags` \
 	-DNO_DEBUG -DQWS -DPLATFORM_ZAURUS -DVERSION=\"$(VERSION)\" \
-	-DPACKAGE_DATA_DIR=\"$(PACKAGE_DATA_DIR)\" -DOSS_SOUND_SUPPORT -DSZ81 
+	-DPACKAGE_DATA_DIR=\"$(PREFIX)\" -DOSS_SOUND_SUPPORT -DSZ81 
 LINK=$(CC)
 LDFLAGS=-L$(DEVPREFIX)/lib
 LIBS=`$(DEVPREFIX)/bin/sdl-config --prefix=$(DEVPREFIX) --libs`
@@ -24,7 +24,7 @@ all: $(SOURCES) $(TARGET)
 
 $(TARGET): $(OBJECTS)
 	$(LINK) $(LDFLAGS) $(OBJECTS) $(LIBS) -o $@
-#	zaurus/_buildipk
+	zaurus/_buildipk
 
 %.o: %.c 
 	$(CC) $(CFLAGS) -c $< -o $@
