@@ -16,6 +16,7 @@
  */
 
 /* Includes */
+#include <unistd.h>
 #include <stdlib.h>
 #include <string.h>
 #include "sdl.h"
