@@ -1,0 +1,2 @@
+#!/bin/sh
+sz81 -a zs $@
