@@ -1,3 +1,8 @@
+2010-03-22 Thunor <thunorsif_at_hotmail.com>
+* Fixed an issue with the load selector changing the working directory
+  and the GP2X's relatively referenced rcfile being written elsewhere.
+* Added -d command line option to show any input device IDs on-screen.
+
 2010-03-21 Thunor <thunorsif_at_hotmail.com>
 * Added a protected property to ctrl_remaps to prevent modifying some
   important universally active controls such as toggle-keyboard.
